changes to html and js files

--- a/prices.html
+++ b/prices.html
@@ -8,19 +8,13 @@
     <title>Prices</title>
   </head>
   <body>
-<div id="container">
-  <h1>Crypto Converter</h1>
-<p id="current"></p>
-    <!-- <p id="infotime"></p> -->
-    <p>Enter dollar amount that you wish to invest in buying Bitcoin:</p>
+    <div id="container">
+      <h1>Crypto Converter</h1>
+      <p>Enter the amount you are willing to invest in Crypto:</p>
       <label for="usd">Enter USD amount: </label>
       <input type="text" id="usd" name="usd" />
-      <input type="submit" onclick="takeInput()" />
-      <p id="bitcoin"></p>
-
-</div>
-
-
+      <input type="submit" value="Convert" onclick="takeInput()" />
+    </div>
 
     <script src="./assets/js/convert.js"></script>
   </body>
