--- a/prices.html
+++ b/prices.html
@@ -10,12 +10,14 @@
   <body>
     <div id="container">
       <h1>Crypto Converter</h1>
-      <p>Enter the amount you are willing to invest in Crypto:</p>
+      <h4>Enter the amount you are willing to invest in Crypto:</h4>
       <label for="usd">Enter USD amount: </label>
       <input type="text" id="usd" name="usd" />
       <input type="submit" value="Convert" onclick="takeInput()" />
+      <input type="submit" value="Clear" onclick="clearAll()" />
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./assets/js/convert.js"></script>
   </body>
 </html>
