--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/prices.css" />
-    <title>Prices</title>
+    <title>Crypto Converter</title>
   </head>
   <body>
     <div id="container">
